<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".presentation.fragments.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_section"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/gray"
            android:text="@string/сharacters"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/gray"
            android:text="@string/locations"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/gray"
            android:text="@string/episodes"
            android:textSize="10sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>