<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/item_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin = "16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/char_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:elevation="14dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/char_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/char_name"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/char_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/char_species"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/char_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/char_status"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/char_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/char_gender"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/char_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:text="when"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/char_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/char_id"
                android:textStyle="bold"
                android:textSize="16sp"/>




        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>